# minipack

./: .gitignore  .oxlintrc.json  Cargo.toml  README.md  biome.json  cspell.json  deny.toml  dprint.json  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json
crates/minipack/: Cargo.toml
crates/minipack/examples/: basic.rs
crates/minipack/examples/basic/: cube.js  entry.js  hyper-cube.js
crates/minipack/src/: bundler.rs  graph.rs  lib.rs
crates/minipack/src/ast_scanner/: dynamic_import.rs  impl_visit.rs  import_assign_analyzer.rs  mod.rs  pre_processor.rs
crates/minipack/src/ast_scanner/side_effect_detector/: mod.rs  utils.rs
crates/minipack/src/generate_stage/: code_splitting.rs  compute_cross_chunk_links.rs  generate_chunk_name_and_preliminary_filenames.rs  mod.rs  render_chunk_to_assets.rs
crates/minipack/src/generate_stage/generators/: asset.rs  ecmascript.rs  mod.rs
crates/minipack/src/generate_stage/scope_hoisting/: finalizer_context.rs  impl_visit_mut.rs  mod.rs  rename.rs
crates/minipack/src/link_stage/: bind_imports_and_exports.rs  create_exports_for_ecma_modules.rs  determine_module_exports_kind.rs  determine_side_effects.rs  generate_lazy_export.rs  include_statements.rs  mod.rs  patch_module_dependencies.rs  prepare_ecma_module_export_info.rs  reference_needed_symbols.rs  sort_modules.rs  wrap_modules.rs
crates/minipack/src/link_stage/bind_imports_and_exports/: bind_imports_and_exports_context.rs  mod.rs
crates/minipack/src/link_stage/tree_shaking/: determine_side_effects.rs  include_statements.rs
crates/minipack/src/loaders/: mod.rs
crates/minipack/src/loaders/asset/: asset_generator.rs
crates/minipack/src/loaders/ecmascript/: ecma_generator.rs  ecma_module_view_factory.rs  mod.rs
crates/minipack/src/module_finalizers/isolating/: impl_visit_mut.rs  mod.rs
crates/minipack/src/module_finalizers/scope_hoisting/: finalizer_context.rs  impl_visit_mut.rs  mod.rs  rename.rs
crates/minipack/src/module_loader/: mod.rs  module_task.rs  runtime_module_task.rs  task_context.rs
crates/minipack/src/module_loader/ast_scanner/: cjs_ast_analyzer.rs  dynamic_import.rs  esmodule_flag_analyzer.rs  impl_visit.rs  import_assign_analyzer.rs  mod.rs  pre_processor.rs
crates/minipack/src/module_loader/loaders/: asset.rs  css.rs  ecmascript.rs
crates/minipack/src/scan_stage/: mod.rs  module_loader.rs  module_task.rs  runtime_module_task.rs  task_context.rs
crates/minipack/src/scan_stage/ast_scanner/: cjs_ast_analyzer.rs  dynamic_import.rs  impl_visit.rs  import_assign_analyzer.rs  mod.rs  pre_processor.rs
crates/minipack/src/scan_stage/loaders/: css.rs  ecmascript.rs  mod.rs
crates/minipack/src/scan_stage/module_loader/: runtime_module_task.rs
crates/minipack/src/scan_stage/runtime/: index.js
crates/minipack/src/stages/: mod.rs
crates/minipack/src/stages/generate/: code_splitting.rs  compute_cross_chunk_links.rs  generate_chunk_name_and_preliminary_filenames.rs  mod.rs  render_chunk_to_assets.rs
crates/minipack/src/stages/link/: bind_imports_and_exports.rs  create_exports_for_ecma_modules.rs  generate_lazy_export.rs  (+8 more)
crates/minipack/src/types/: bundle_output.rs  generator.rs  linking_metadata.rs  mod.rs  module_factory.rs  oxc_parse_type.rs
crates/minipack/src/utils/: load_source.rs  make_ast_symbol_and_scope.rs  mod.rs  normalize_bundler_options.rs  normalize_options.rs  parse_to_ecma_ast.rs  pre_process_ecma_ast.rs  renamer.rs  render_ecma_module.rs  resolve_id.rs
crates/minipack_cli/: Cargo.toml
crates/minipack_cli/src/: args.rs  main.rs
crates/minipack_cli/src/types/: es_target.rs  mod.rs  output_exports.rs  output_format.rs  platform.rs
crates/minipack_common/: Cargo.toml
crates/minipack_common/src/: lib.rs
crates/minipack_common/src/bundler_options/: es_module_flag.rs  es_target.rs  filename_template.rs  input_item.rs  mod.rs  module_type.rs  normalized_bundler_options.rs  output_exports.rs  output_format.rs  resolve_options.rs
crates/minipack_common/src/chunk/: chunk_table.rs  mod.rs
crates/minipack_common/src/ecmascript/: dynamic_import_usage.rs  ecma_view.rs  mod.rs
crates/minipack_common/src/module/: external_module.rs  mod.rs  normal_module.rs
crates/minipack_common/src/module_loader/: mod.rs  runtime_module_brief.rs  runtime_task_result.rs  task_result.rs
crates/minipack_common/src/types/: asset.rs  asset_meta.rs  ast_scopes.rs  chunk_kind.rs  entry_point.rs  import_kind.rs  import_record.rs  importer_record.rs  instantiated_chunk.rs  member_expr_ref.rs  mod.rs  module_id.rs  module_info.rs  module_render_output.rs  module_table.rs  named_import.rs  namespace_alias.rs  output.rs  output_asset.rs  output_chunk.rs  package_json.rs  raw_idx.rs  rendered_module.rs  resolved_request_info.rs  rollup_pre_rendered_chunk.rs  rollup_rendered_chunk.rs  side_effects.rs  source.rs  source_joiner.rs  stmt_info.rs  str_or_bytes.rs  symbol_or_member_expr_ref.rs  symbol_ref.rs  symbol_ref_db.rs
crates/minipack_ecmascript/: Cargo.toml
crates/minipack_ecmascript/src/: ecma_compiler.rs  lib.rs
crates/minipack_ecmascript/src/ecma_ast/: helpers.rs  mod.rs  program_cell.rs
crates/minipack_ecmascript/src/ecma_utils/: ast_snippet.rs  mod.rs
crates/minipack_ecmascript_utils/: Cargo.toml
crates/minipack_ecmascript_utils/src/: ast_snippet.rs  lib.rs
crates/minipack_error/: Cargo.toml
crates/minipack_error/src/: lib.rs
crates/minipack_fs/: Cargo.toml
crates/minipack_fs/src/: file_system.rs  lib.rs  os.rs
crates/minipack_resolver/: Cargo.toml
crates/minipack_resolver/src/: lib.rs  resolver.rs
crates/minipack_sourcemap/: Cargo.toml
crates/minipack_sourcemap/src/: lib.rs  lines_count.rs  source.rs  source_joiner.rs
crates/minipack_utils/: Cargo.toml
crates/minipack_utils/src/: bitset.rs  ecmascript.rs  global_reference.rs  hash_placeholder.rs  indexmap.rs  lib.rs  light_guess.rs  mime.rs  option_ext.rs  path_buf_ext.rs  path_ext.rs  pretty_type_name.rs  rayon.rs  replace_all_placeholder.rs  rstr.rs  rustc_hash.rs  sanitize_file_name.rs  text_to_esm.rs  to_str.rs  xxhash.rs
(+71 files in other folders)
