[package]
description = "minipack_common"
name        = "minipack_common"
version     = "0.1.0"

edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
minipack_ecmascript = { workspace = true }
minipack_sourcemap  = { workspace = true }
minipack_utils      = { workspace = true }

anyhow        = { workspace = true }
arcstr        = { workspace = true }
bitflags      = { workspace = true }
fast-glob     = { workspace = true }
itertools     = { workspace = true }
lightningcss  = { workspace = true }
oxc           = { workspace = true }
oxc_index     = { workspace = true }
oxc_resolver  = { workspace = true }
rustc-hash    = { workspace = true }
serde_json    = { workspace = true }
string_wizard = { workspace = true }
sugar_path    = { workspace = true }
