[package]
description = "minipack_common"
name        = "minipack_common"

edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
readme.workspace     = true
repository.workspace = true
version.workspace    = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
minipack_ecmascript = { workspace = true }
minipack_utils      = { workspace = true }

anyhow        = { workspace = true }
arcstr        = { workspace = true }
bitflags      = { workspace = true }
fast-glob     = { workspace = true }
itertools     = { workspace = true }
memchr        = { workspace = true }
oxc           = { workspace = true }
oxc_index     = { workspace = true }
oxc_resolver  = { workspace = true }
rustc-hash    = { workspace = true }
serde_json    = { workspace = true }
string_wizard = { workspace = true }
sugar_path    = { workspace = true }
