[package]
name = "minipack_common"
description = "minipack_common"

version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
minipack_ecmascript = { workspace = true }
minipack_utils = { workspace = true }

anyhow = { workspace = true }
arcstr = { workspace = true }
bitflags = { workspace = true }
fast-glob = { workspace = true }
itertools = { workspace = true }
memchr = { workspace = true }
oxc = { workspace = true }
oxc_index = { workspace = true, features = ["serde"] }
oxc_resolver = { workspace = true }
rustc-hash = { workspace = true }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { workspace = true }
sugar_path = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["serde"]
