[package]
name = "minipack_ecmascript"

version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
minipack_error = { workspace = true }

anyhow = { workspace = true }
arcstr = { workspace = true }
oxc = { workspace = true }
self_cell = { workspace = true }
smallvec = { workspace = true }
