[package]
name = "minipack_ecmascript_utils"

edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
readme.workspace     = true
repository.workspace = true
version.workspace    = true

[lib]
doctest = false

[lints]
workspace = true


[dependencies]
minipack_common = { workspace = true }

oxc      = { workspace = true }
smallvec = { workspace = true }
