[package]
name = "minipack_ecmascript_utils"

version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
minipack_common = { workspace = true }

oxc = { workspace = true }
smallvec = { workspace = true }
