[package]
description = "minipack_error"
name        = "minipack_error"
version     = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
