[package]
name = "minipack_fs"

edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
readme.workspace     = true
repository.workspace = true
version.workspace    = true

[lib]
doctest = false

[lints]
workspace = true

[features]
os = []

[dependencies]
oxc_resolver = { workspace = true }
