[package]
name = "minipack_resolver"
description = "minipack_resolver"

version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
minipack_common = { workspace = true }
minipack_fs = { workspace = true }

arcstr = { workspace = true }
dashmap = { workspace = true }
itertools = { workspace = true }
oxc_resolver = { workspace = true }
sugar_path = { workspace = true }
