[package]
name    = "minipack_sourcemap"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
memchr         = { workspace = true }
minipack_utils = { workspace = true }
oxc            = { workspace = true }
rustc-hash     = { workspace = true }
