[package]
name = "minipack_sourcemap"

edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
readme.workspace     = true
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
memchr        = { workspace = true }
oxc_sourcemap = { workspace = true, features = ["rayon"] }
