[package]
name    = "minipack_utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow      = { workspace = true }
arcstr      = { workspace = true }
base64-simd = { workspace = true }
indexmap    = { workspace = true, features = ["serde"] }
infer       = { workspace = true }
memchr      = { workspace = true }
mime        = { workspace = true }
oxc         = { workspace = true }
phf         = { workspace = true }
rayon       = { workspace = true }
regex       = { workspace = true }
rustc-hash  = { workspace = true }
serde_json  = { workspace = true }
simdutf8    = { workspace = true }
sugar_path  = { workspace = true }
