[package]
name = "minipack_utils"

version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
arcstr = { workspace = true }
base-encode = { workspace = true }
base64-simd = { workspace = true }
indexmap = { workspace = true }
oxc = { workspace = true }
phf = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
sugar_path = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }
